# reviewer-two-env

./: .gitignore  Dockerfile  Dockerfile.green-agent  Dockerfile.purple-agent  README.md  openenv.yaml  pyproject.toml  requirements.txt  test_evaluation.py
.github/workflows/: deploy-hf-space.yml  green-agent-publish.yml  purple-agent-publish.yml
docs/: green-agent.md
research_plan_env/: __init__.py  client.py  models.py
research_plan_env/green_agent/: __init__.py  agent.py  messenger.py  models.py  server.py
research_plan_env/purple_agent/: __init__.py  agent.py  server.py
research_plan_env/server/: __init__.py  app.py  environment.py  reward_calculator.py
tests/: __init__.py  test_environment.py  test_purple_agent.py
